--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,21 +3,24 @@
 
 @import "{{ site.theme }}";
 
+/* Общее */
 html, body {
   background-color: #0d1117;
   color: #c9d1d9;
   font-family: 'Comic Sans MS', cursive, sans-serif;
 }
 
+/* Ссылки */
 a {
   color: #58a6ff;
 }
 
+/* Заголовки */
 h1, h2, h3, h4, h5 {
   color: #ffffff;
 }
 
-/* Стили для таблиц */
+/* Таблицы */
 table {
   width: 100%;
   border-collapse: collapse;
