--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,3 @@
----
----
-
-@import "{{ site.theme }}";
 
 /* Общее */
 html, body {
@@ -24,9 +20,7 @@ h1, h2, h3, h4, h5 {
 table {
   width: 100%;
   border-collapse: collapse;
-  background-color: #161b22;
-  color: #c9d1d9;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
+  background-color: #333;
 }
 
 th, td {
