--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,3 +21,15 @@ h1, h2, h3, h4, h5 {
   color: #ffffff;
 }
 
+
+table {
+  background-color: #222;
+}
+
+tr {
+  background-color: #333;
+}
+
+td {
+  background-color: #444;
+}
