--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,13 +23,20 @@ h1, h2, h3, h4, h5 {
 
 
 table {
-  background-color: #222;
+  background-color: #0d1117;
+  color: #c9d1d9;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
+
+
+
 tr {
-  background-color: #333;
+  background-color: #c9d1d9;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 td {
-  background-color: #444;
+  background-color: #0d1117;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
