--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
 html, body {
   background-color: #0d1117;
   color: #c9d1d9;
-  font-family: 'Comic Sans MS', cursive, sans-serif;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 /* Ссылки */
@@ -21,14 +21,19 @@ h1, h2, h3, h4, h5 {
   color: #ffffff;
 }
 
+table thead {
+  background-color: #0d1117;
+}
+
+table th {
+  background-color: #0d1117;
+}
 
 table {
   background-color: #0d1117;
   color: #c9d1d9;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
-
-
 
 
 tr {
