--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,9 +5,19 @@
 
 
 /* Общее */
-html, body {
+html {
   background-color: #0d1117;
   color: #c9d1d9;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+
+body {
+  background-color: #0d1117;
+  color: #c9d1d9;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
+
+p {
   font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
