--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,19 +24,23 @@ p {
 /* Ссылки */
 a {
   color: #58a6ff;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 /* Заголовки */
 h1, h2, h3, h4, h5 {
   color: #ffffff;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 table thead {
   background-color: #0d1117;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 table th {
   background-color: #0d1117;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 table {
