--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,3 +59,7 @@ td {
   background-color: #0d1117;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
+
+li {
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
+}
